--- a/_data/locales/en.yml
+++ b/_data/locales/en.yml
@@ -3,10 +3,11 @@ index:
   sound: SOUND BETTER
   discover: DISCOVER WHO WE ARE
   notbad: "(not just less bad)"
-  description: "Sounds in the City, led by Prof. Guastavino, brings together
-        researchers, artists, professionals who shape our cities, and citizens,
-        to look at urban sound from a novel, resource-oriented perspective and
-        nourish creative solutions to make cities sound better."
+  description: "Sound plays a critical and complex role in the way we experience urban spaces. 
+  Today, most cities treat urban sound as “noise”, an isolated nuisance that should be mitigated when problems arise. 
+  But sound is more than just noise! Sound can also support our well-being, orientation in time and space, focus, 
+  and our lasting memories of urban spaces - even the city as a whole. 
+  Think about the sounds of your daily life, such as music, conversation, bird chirping, or bells."
   discover: "DISCOVER WHO WE ARE"
   who: "WHO WE ARE"
   meet: "Meet the team & collaborators"
@@ -15,17 +16,17 @@ index:
   accordions:
     - title: SOUNDS IN CITIES
       id: "home-accordion-1"
-      description: "Sound plays a critical and complex role in the way we experience urban spaces. Today, cities treat urban sound as “noise”, an isolated nuisance that should be mitigated when problems arise. But sound can also support our well-being, orientation, focus, and our lasting memories of urban spaces - even the city as a whole (e.g. music, conversation, bird chirping, water sounds)."
+      description: "Sounds in the City, led by Prof. Guastavino, brings together researchers, artists, professionals who shape our cities, and citizens, to look at urban sound from a novel, resource-oriented perspective and nourish creative solutions to make cities sound better. "
       image: "/assets/images/accordions/home/1.png"
 
-    - title: WHAT IS SOUNDSCAPE?
+    - title: SOUNDSCAPE
       id: "home-accordion-2"
-      description: "Sound plays a critical and complex role in the way we experience urban spaces. Today, cities treat urban sound as “noise”, an isolated nuisance that should be mitigated when problems arise. But sound can also support our well-being, orientation, focus, and our lasting memories of urban spaces - even the city as a whole (e.g. music, conversation, bird chirping, water sounds)."
+      description: "<a href=\"./soundscape\">Soundscape</a> is a new user-centered proactive approach reframing sound as a resource, in relation to other urban design considerations, from early conception to long-term use. It does away with the implicit assumption that all environmental sounds are unwanted. While soundscape has become well established in research, implementation in practice remains scarce. Ultimately, every city user deserves to live, work, play and relax in sound environments they find appropriate. Realizing this goal involves accounting for “city users” perspectives, their activities, and the contexts in which sounds are experienced, all of which has implications for how “city makers” plan and design urban spaces. In the long run, we can improve the quality of life of residents and visitors who will benefit from a better-managed city, where sound has been considered as part of their experience."
       image: "/assets/images/accordions/home/1.png"
 
-    - title: LOCATION
+    - title: MONTREAL AS LIVING LAB
       id: "home-accordion-3"
-      description: "Sound plays a critical and complex role in the way we experience urban spaces. Today, cities treat urban sound as “noise”, an isolated nuisance that should be mitigated when problems arise. But sound can also support our well-being, orientation, focus, and our lasting memories of urban spaces - even the city as a whole (e.g. music, conversation, bird chirping, water sounds)."
+      description: "Sounds in the City uses Montreal as a living laboratory for soundscape research in collaboration with a wide range of stakeholders from the private and public sectors, as well as the general public. Building on momentum to revisit noise policies in Canada and Quebec, we have assembled a cross-sectorial partnership to inform more equitable, sound-aware and healthier city-making."
       image: "/assets/images/accordions/home/1.png"
   slides:
     - title: "COVID-19 and c"
@@ -137,7 +138,7 @@ projects:
   before: "BEFORE"
   year: "YEAR"
   credits: "Credits"
-  discover_project: "DISCOVER THE PROJET"
+  discover_project: "DISCOVER THE PROJECT"
   author: "author"
 
 media:
@@ -262,42 +263,44 @@ services:
         - name: Developing research instruments and tools
         - name: Documenting and integrating insights from different stakeholders
         - name: Characterization of sound environments of e.g., “high quality”
-    - name: "Workshops "
+    - name: "Workshops"
       id: "workshop"
       points:
-        - name: "Participatory research approaches with an “ear” for fairness and equity"
-        - name: "For public space and ambiance"
-        - name: Balancing quantitative and qualitative insights
-        - name: Developing research instruments and tools
-        - name: Documenting and integrating insights from different stakeholders
-        - name: Characterization of sound environments of e.g., “high quality”
+        - name: "With stakeholders e.g.
+                    With design professionals
+                    With planning professionals
+                    With policy makers
+                    With sound artists
+                    With general public"
+        - name: "Using 
+                    tangible design aids e.g. worksheets
+                    Using immersive / embodied methods e.g. VR simulation, soundwalks,"
+        - name: listening exercises 
+                    Using innovative approaches e.g. empathy-building exercises
     - name: "Knowledge mobilization"
       id: "knowledge"
       points:
-        - name: "Participatory research approaches with an “ear” for fairness and equity"
-        - name: "For public space and ambiance"
-        - name: Balancing quantitative and qualitative insights
-        - name: Developing research instruments and tools
-        - name: Documenting and integrating insights from different stakeholders
-        - name: Characterization of sound environments of e.g., “high quality”
+        - name: "Into policy"
+        - name: "Into urban design practice"
+        - name: Into artistic creation
+        - name: Into education
     - name: "Research creation"
       id: "creation"
       points:
-        - name: "Participatory research approaches with an “ear” for fairness and equity"
-        - name: "For public space and ambiance"
-        - name: Balancing quantitative and qualitative insights
-        - name: Developing research instruments and tools
-        - name: Documenting and integrating insights from different stakeholders
-        - name: Characterization of sound environments of e.g., “high quality”
+        - name: "Collaboration with sound artists"
+        - name: "Sound art in public / private spaces"
     - name: "Outreach / sound awareness"
       id: "awareness"
       points:
-        - name: "Participatory research approaches with an “ear” for fairness and equity"
-        - name: "For public space and ambiance"
-        - name: Balancing quantitative and qualitative insights
-        - name: Developing research instruments and tools
-        - name: Documenting and integrating insights from different stakeholders
-        - name: Characterization of sound environments of e.g., “high quality” 
+        - name: "Soundwalks"
+        - name: "Public lectures"
+        - name: Workshops (see above)
+        - name: Sound ecology courses (for urban professionals)
+    - name: "See our list of projects. Other examples including:"
+      id: "examples"
+      points:
+        - name: "Design of ‘healthy working environments’ (indoors and outdoors) for you and your employees"
+        - name: "Animation of public spaces through sound"
   slides:
     - title: "COVID-19 and c"
       description: "Getting a taste of the quiet we thought we wanted"
