--- a/_data/locales/fr.yml
+++ b/_data/locales/fr.yml
@@ -50,26 +50,28 @@ about:
 
 
 soundscape:
-  title: Why sound matters?
-  description: Often described as the “new secondhand smoke”, <strong>noise is a major pollutant</strong> of our time, with consequences ranging from annoyance and hearing loss to early death. Poor noise management also has environmental consequences as precious resources and space are wasted.
+  title: Le sonore, c’est important?
+  description: "Le bruit est <strong>un enjeu majeur</strong> dans nos milieux de vie, généralement abordé sous l’angle des nuisances et des niveaux de bruit.
+
+<br><br>Mais tout n’est pas qu’une question de bruit ! Prendre en compte l’expérience sonore participe à améliorer nos milieux de vies dans une perspective de santé durable. Prendre en compte le sonore peut rendre nos villes plus favorables à la santé. Mais comment faire ? Voici quelques principes pour commencer. "
   p1:
-    - url: "/assets/audios/1.mp3"
+    - url: "/assets/audios/SoundFile1_SoundscapePage_TamTamMontRoyal.mp3"
       id: "audio-1"
-      name: "Sounds of A busy road"
-      credits: "V. Fraisse, 2023."
-      album: "Le Plateau, Mont Royal, Montréal."
+      name: "Tam-tams au parc du Mont-Royal : Un repère sonore (soundmark) de Montréal "
+      credits: "Mariana Mejia Ahrens, 2019"
+      album: "Enregistré au parc du Mont-Royal"
 
-    - url: "/assets/audios/1.mp3"
+    - url: "/assets/audios/SoundFile2_SoundscapePage_TakingBreak.mp3"
       id: "audio-2"
-      name: "MONTREAL CITY CENTER"
-      credits: "V. Fraisse, 2023."
-      album: "Place des Arts, Montréal."
+      name: "Faire une pause avec les oiseaux dans un petit parc de Montréal"
+      credits: "Catherine Guastavino, 2020"
+      album: "Enregistré au parc Palomino-Brind’Amour, Plateau Mont-Royal"
 
-    - url: "/assets/audios/1.mp3"
+    - url: "/assets/audios/SoundFile3_SoundscapePage_ConstructionTraffic.mp3"
       id: "audio-3"
-      name: "MONTREAL CITY CENTER"
-      credits: "V. Fraisse, 2023."
-      album: "Place des Arts, Montréal."
+      name: "Bruits de construction et de trafic"
+      credits: "Valérian. Fraisse, 2019."
+      album: "Enregistré à la place des Fleurs-de-Macadam, Plateau Mont-Royal"
 
   p2:
     - url: "/assets/audios/1.mp3"
@@ -120,7 +122,68 @@ soundscape:
     late, it also fails to build fairness into our cities. Indeed minoritized
     communities are subject to more stringent policing, and more likely to be
     exposed to higher noise levels."
+  cards:
+    list1:
+      - id: 1
+        img_src: '/assets/images/soundscape principles/1-fountains-creditChristineKerrigan.JPG'
+        subtitle: 'Le sonore n’est pas que du bruit'
+        description: 'C’est bien plus ! Si certains sons peuvent déranger ou distraire, d’autres aident à se divertir, s’orienter, et/ou se ressourcer. Le sonore peut être considéré comme une ressource, pas seulement comme une nuisance.'
 
+      - id: 2
+        img_src: '/assets/images/soundscape principles/2-traffic-creditDanielSteele.png'
+        subtitle: 'Le sonore n’existe pas en vase clos'
+        description: 'Le sonore est au cœur de nos expériences sensibles, qui sont façonnées par un ensemble de facteurs, tant personnels (par ex. autres sens, attentes) que contextuels (par ex. culture, environnement bâti). Le sonore doit être considéré comme partie intégrante de la fabrique urbaine. Pensons, par exemple, à la manière dont les rues partagées façonnent l’environnement sonore.'
+
+      - id: 3
+        img_src: '/assets/images/soundscape principles/3-tamtams-creditMatiasGarabedian.jpg'
+        subtitle: 'Nous vivons tou·tes le sonore différemment'
+        description: 'La manière dont nous produisons et percevons le sonore dépend de notre vécu individuel, social et culturel. '
+
+      - id: 4
+        img_src: '/assets/images/soundscape principles/4-measurements-creditEddaBild.jpg'
+        subtitle: 'Les niveaux sonores ne disent pas tout.'
+        description: 'L’exposition au bruit, même à faible niveau, peut affecter notre santé et bien souvent sans que l’on s’en rende compte. Au-delà du niveau sonore, d’autres propriétés physiques (par ex. évolution temporelle, contenu spectral) affectent notre perception. Plus encore, la signification attribuée aux sons et aux sources qui les produisent jouent un rôle primordial dans notre expérience. À niveau égal, la musique n’est pas ressentie comme le bruit routier. '
+
+      - id: 5
+        img_src: '/assets/images/soundscape principles/5-guitar-creditCynthiaTarlao.jpeg'
+        subtitle: 'Le sonore peut contribuer à l’(in)justice environnementale.'
+        description: 'Les groupes vulnérables sont souvent exposés à des niveaux de bruit plus élevés et ont moins accès à des ambiances sonores de qualité.'
+
+    list2:
+      - id: 6
+        img_src: '/assets/images/soundscape principles/6-mockup-creditPetersenStudio.png'
+        subtitle: 'Les ambiances sonores ne sont pas figées'
+        description: 'Les ambiances sonores évoluent dans le temps et l’espace, selon les usages et les personnes. Imaginez les sons autour de vous à différentes périodes du jour, selon les saisons, dans différents quartiers.'
+
+      - id: 7
+        img_src: '/assets/images/soundscape principles/7-soundwalk-creditChristineKerrigan.jpg'
+        subtitle: 'Le sonore reflète la vie'
+        description: 'La ville vibre au rythme des sons qui l’animent. Pouvez-vous imaginer un festival ou des terrasses de restaurant sans en entendre l’effervescence ? Une promenade au parc sans le chant des oiseaux ? Le silence n’est pas toujours le but à atteindre. '
+
+      - id: 8
+        img_src: '/assets/images/soundscape principles/8-Lyon-creditRomainBehar.jpg'
+        subtitle: 'Le dialogue est essentiel'
+        description: 'La sensibilisation au sonore est un élément clé. Nous ne sommes pas seulement exposés passivement à l’environnement sonore qui nous entoure, mais nous contribuons activement à le façonner. On pense souvent au bruit des autres, mais c’est une responsabilité partagée. Pensons à nos conversations téléphoniques dans les transports, est-ce que les autres passagers nous entendent ? Ou encore, avez-vous déjà été dérangé·e par des bruits de construction avoisinants sans en avoir été prévenu·e ? '
+
+      - id: 9
+        img_src: '/assets/images/soundscape principles/9-plane-creditUSNationalArchivesandRecordsAdministration.jpg'
+        subtitle: 'Le sonore favorise ou entrave nos activités et notre ressenti.'
+        description: 'Que faites-vous lorsque vous ne pouvez pas entendre votre interlocuteur dans un restaurant ? Inversement, vous sentez-vous revigoré·e lors d’un concert ou détendu·e en vous promenant au bord de l’eau ?'
+
+      - id: 10
+        img_src: '/assets/images/soundscape principles/10-festival-creditChristineKerrigan.JPG'
+        subtitle: 'Le sonore contribue au sentiment d’appartenance'
+        description: 'Pensons aux sonorités importantes pour notre communauté, aux repères sonores de votre ville (par ex. vendeurs ambulants, cloches de de vaches). Le sonore peut contribuer à renforcer la vocation et notre attachement aux lieux et aux quartiers.'
+  steps:
+  - id: 1
+    title: 'Une personne sur 5 est fortement dérangée par le bruit au Québec'
+  - id: 2
+    title: 'Le bruit est le 2ième facteur de risque environnemental (derrière la pollution de l’air).'
+  - id: 3
+    title: 'Une ambiance sonore de qualité peut réduire le stress.'
+  - id: 4
+    title: 'Le sonore peut animer l’espace public.'
+    
 projects:
   title: "LISTE DE PROJETS"
   description: "projects description"
