updated french team bios, updated images

--- a/_data/locales/fr.yml
+++ b/_data/locales/fr.yml
@@ -45,7 +45,7 @@ index:
       image: "/assets/images/slides/slide1.png"
 
 about:
-  title: "About Us"
+  title: "À propos de nous"
   back: Back
 
 
