--- a/_data/locales/fr.yml
+++ b/_data/locales/fr.yml
@@ -141,12 +141,12 @@ soundscape:
 
       - id: 4
         img_src: '/assets/images/soundscape principles/4-measurements-creditEddaBild.jpg'
-        subtitle: 'Les niveaux sonores ne disent pas tout.'
+        subtitle: 'Les niveaux sonores ne disent pas tout'
         description: 'L’exposition au bruit, même à faible niveau, peut affecter notre santé et bien souvent sans que l’on s’en rende compte. Au-delà du niveau sonore, d’autres propriétés physiques (par ex. évolution temporelle, contenu spectral) affectent notre perception. Plus encore, la signification attribuée aux sons et aux sources qui les produisent jouent un rôle primordial dans notre expérience. À niveau égal, la musique n’est pas ressentie comme le bruit routier. '
 
       - id: 5
         img_src: '/assets/images/soundscape principles/5-guitar-creditCynthiaTarlao.jpeg'
-        subtitle: 'Le sonore peut contribuer à l’(in)justice environnementale.'
+        subtitle: 'Le sonore peut contribuer à l’(in)justice environnementale'
         description: 'Les groupes vulnérables sont souvent exposés à des niveaux de bruit plus élevés et ont moins accès à des ambiances sonores de qualité.'
 
     list2:
@@ -167,7 +167,7 @@ soundscape:
 
       - id: 9
         img_src: '/assets/images/soundscape principles/9-plane-creditUSNationalArchivesandRecordsAdministration.jpg'
-        subtitle: 'Le sonore favorise ou entrave nos activités et notre ressenti.'
+        subtitle: 'Le sonore favorise ou entrave nos activités et notre ressenti'
         description: 'Que faites-vous lorsque vous ne pouvez pas entendre votre interlocuteur dans un restaurant ? Inversement, vous sentez-vous revigoré·e lors d’un concert ou détendu·e en vous promenant au bord de l’eau ?'
 
       - id: 10
@@ -176,7 +176,7 @@ soundscape:
         description: 'Pensons aux sonorités importantes pour notre communauté, aux repères sonores de votre ville (par ex. vendeurs ambulants, cloches de de vaches). Le sonore peut contribuer à renforcer la vocation et notre attachement aux lieux et aux quartiers.'
   steps:
   - id: 1
-    title: 'Une personne sur 5 est fortement dérangée par le bruit au Québec'
+    title: 'Une personne sur 5 est fortement dérangée par le bruit au Québec.'
   - id: 2
     title: 'Le bruit est le 2ième facteur de risque environnemental (derrière la pollution de l’air).'
   - id: 3
